<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        />

    <TextView
        android:id="@+id/textViewFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text="@string/fullname"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/undefined"
        app:layout_constraintTop_toBottomOf="@id/textViewFullName"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/undefined"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:text="@string/phonenumber"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/undefined"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/textViewPhoneNumber"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeMaxTextSize="1000sp"
        android:background="@drawable/bg_login_register_button_green"
        android:textAllCaps="false"
        android:text="@string/changesettings"
        android:textColor="@color/white"
        app:layout_constraintDimensionRatio="55:10"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"/>


</androidx.constraintlayout.widget.ConstraintLayout>